# object-counter

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/: code-quality.yml
.github/workflows/: code-quality.yml  tests.yml
alembic/: env.py
alembic/versions/: 9e249477bdba_initial_tables.py  d0e2d36aa17d_add_timestamps_to_all_tables.py
counter/: config.py
counter/adapters/: count_repo.py  object_detector.py
counter/domain/: actions.py
counter/entrypoints/: webapp.py
resources/model-files/: mscoco_label_map.json
scripts/: save-model.sh
src/api/: app.py
src/api/v1/: __init__.py  routers.py
src/api/v1/endpoints/: __init__.py  detect.py  models.py  object.py
src/api/v1/schemas/: detect.py
src/common/: data.py  database.py  dependency.py  logger.py  models.py  settings.py
src/modules/: config.py  debug.py
src/modules/adapters/: count_repo.py  object_detector.py
src/modules/adps/: base.py  mysql_object.py  relational_object.py
src/modules/detection/: data.py  models.py  services.py
src/modules/detector/: base.py  factory.py  tf_serving.py
src/modules/domain/: actions.py  ports.py  predictions.py
tests/: conftest.py
tests/domain/: helpers.py  test_actions.py  test_predictions.py
tests/e2e/: test_detection_api.py
tests/entrypoints/: test_webapp.py
tests/integration/: conftest.py  test_detection_api.py  test_health.py
tests/unit/: test_detection_service.py  test_mysql_object_count.py  test_object_detector.py
tests/unit/endpoints/: test_detection_endpoint.py
tmp/model/: model_config.config
