[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "object-counter"
version = "0.1.0"
description = "Object Counter is a Python package that counts the number of objects in an image."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.2.3",
    "pillow==11.1.0",
    "requests==2.32.3",
    "pymongo==4.11.2",
    "fastapi==0.115.11",
    "python-multipart==0.0.20",
    "uvicorn==0.34.0"
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "pytest==8.3.5",
    "flake8==7.0.0",
    "isort==5.13.2"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.isort]
profile = "black"
