[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "object-counter"
version = "0.1.0"
description = "Object Counter is a Python package that counts the number of objects in an image."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.15.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cryptography==44.0.2",
    "dnspython==2.7.0",
    "fastapi==0.115.11",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "Mako==1.3.9",
    "MarkupSafe==3.0.2",
    "numpy==2.2.3",
    "packaging==24.2",
    "pillow==11.1.0",
    "pydantic==2.10.6",
    "pydantic-settings==2.8.1",
    "pydantic_core==2.27.2",
    "pymongo==4.11.2",
    "PyMySQL==1.1.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "setuptools==76.0.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.39",
    "starlette==0.46.1",
    "typing_extensions==4.12.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0"
]

[project.optional-dependencies]
dev = [
    "autoflake==2.3.1",
    "black==25.1.0",
    "cfgv==3.4.0",
    "coverage==7.7.0",
    "distlib==0.3.9",
    "filelock==3.18.0",
    "flake8==7.0.0",
    "identify==2.6.9",
    "isort==5.13.2",
    "mccabe==0.7.0",
    "mypy-extensions==1.0.0",
    "nodeenv==1.9.1",
    "pathspec==0.12.1",
    "pipenv==2024.4.1",
    "platformdirs==4.3.7",
    "pluggy==1.5.0",
    "pre_commit==4.2.0",
    "pycodestyle==2.11.1",
    "pyflakes==3.2.0",
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    "pytest-env==1.1.5",
    "virtualenv==20.29.3"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pytest_env]
# E2E_TESTS = "1"
# API_BASE_URL = "http://localhost:8000"
# RUN_DB_TESTS = "1"
# TEST_DATABASE_URL = "mysql+pymysql://user:pass@localhost/test_db"